--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "babel-polyfill": "6.23.0",
     "material-ui": "0.18.0",
     "react": "15.5.4",
-    "react-addons-css-transition-group": "15.5.2",
     "react-dom": "15.5.4",
     "react-redux": "5.0.4",
-    "react-router": "4.1.1",
+    "react-router-dom": "4.1.1",
     "react-tap-event-plugin": "2.0.1",
+    "react-transition-group": "1.1.3",
     "redux": "3.6.0",
+    "redux-form": "6.7.0",
+    "redux-form-material-ui": "4.2.0",
     "redux-logger": "3.0.1",
     "redux-thunk": "2.2.0"
   },
